--- a/oracle-2-elastic-search/docker-compose.yml
+++ b/oracle-2-elastic-search/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - '8083:8083'
     environment:
-      BOOTSTRAP_SERVERS: 10.100.30.105:39091,10.100.30.105:39092,10.100.30.105:39093
+      BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       GROUP_ID: 1
       CONFIG_STORAGE_TOPIC: connect_configs
       STATUS_STORAGE_TOPIC: connect_statuses
