--- a/oracle-2-elastic-search/docker-compose.yml
+++ b/oracle-2-elastic-search/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   
   debezium:
     platform: linux/x86_64
-    image: debezium/connect:latest
+    image: debezium/connect:3.0.0.Final
     restart: always
     container_name: debezium
     hostname: debezium
@@ -51,7 +51,7 @@ services:
       retries: 5
   debezium-ui:
     platform: linux/x86_64
-    image: debezium/debezium-ui:latest
+    image: debezium/debezium-ui:2.5
     restart: always
     container_name: debezium-ui
     hostname: debezium-ui
