--- a/oracle-2-elastic-search/docker-compose.yml
+++ b/oracle-2-elastic-search/docker-compose.yml
@@ -23,14 +23,14 @@ services:
     hostname: debezium
     depends_on:
       - oracle
-    ports:
-      - '8083:8083'
+    # ports:
+    #   - '8083:8083'
     environment:
       BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
-      GROUP_ID: 1
-      CONFIG_STORAGE_TOPIC: connect_configs
-      STATUS_STORAGE_TOPIC: connect_statuses
-      OFFSET_STORAGE_TOPIC: connect_offsets
+      GROUP_ID: o2e
+      CONFIG_STORAGE_TOPIC: debezium-config
+      STATUS_STORAGE_TOPIC: debezium_statuses
+      OFFSET_STORAGE_TOPIC: debezium_offsets
       KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       ENABLE_DEBEZIUM_SCRIPTING: 'true'
@@ -51,7 +51,7 @@ services:
       retries: 5
   debezium-ui:
     platform: linux/x86_64
-    image: debezium/debezium-ui:2.5
+    image: debezium/debezium-ui:2.1.2.Final
     restart: always
     container_name: debezium-ui
     hostname: debezium-ui
